fixes and add resume

--- a/index.html
+++ b/index.html
@@ -52,9 +52,16 @@
             <i class="icon fa fa-github-alt" aria-hidden="true"></i>
           </a>
           <a
+            aria-label="My Medium Profile"
+            target="_blank"
+            href="https://medium.com/@wolfe.cameron"
+          >
+            <i class="icon fa fa-medium-alt" aria-hidden="true"></i>
+          </a>
+          <a
             aria-label="My Résumé"
             target="_blank"
-            href="https://www.adityavsingh.com/resume.html"
+            href="./assets/documents/resume_cameronwolfe.pdf"
           >
             <i class="icon fa fa fa-file-pdf-o" aria-hidden="true"></i>
           </a>
@@ -79,7 +86,7 @@
     <section id="about">
       <!-- User Introduction-->
       <div class="user-details">
-        <h1>My Story</h1>
+        <h1>About Me</h1>
         <img
           src="./assets/img/headshot.png"
           alt="Professional Me"
@@ -90,7 +97,7 @@
             I am currently advised by <a href="http://akyrillidis.github.io/about/">Dr. Anastasios Kyrillidis</a>.
             My interests are are loosely related to math and machine learning.
             Currently, my main interests include non-convex optimization theory, multi-modal deep learning, graph neural networks, distributed neural network training, and quantum computing.
-            This list is definitely not exhaustive, however, as my interests change and expand as I find new and interesting projects.
+            This list is definitely not exhaustive, however, as my interests change and expand as I find new and interesting projects.<br>
 
             Prior to coming to Rice, I was an undergraduate student in Computer Science at UT Austin.
             During my time at UT, I did research alongisde the <a href="http://nn.cs.utexas.edu/">neural networks research group</a>.
@@ -358,7 +365,7 @@
     </section>
 
     <footer class="footer">
-      <p>&copy; Aditya Vikram Singh, 2020</p>
+      <p>&copy; Cameron R. Wolfe, 2020</p>
     </footer>
 
     <!-- Import JS: Particles Theme -->
