--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
     <meta
       name="keywords"
       content="Cameron Wolfe, Cameron Ronald Wolfe, Cameron R. Wolfe, Cameron Wolfe Salesforce,
-        Aditya Vikram Singh DPSRKP, Cameron Wolfe Rice, Cameron Wolfe Rice University,
+        Wolfe et al, Cameron Wolfe Rice, Cameron Wolfe Rice University,
         Cameron R. Wolfe Rice Univesity, Cameron R. Wolfe Texas, Cameron R. Wolfe website"
     />
     <!-- Webpage Logo -->
     <link rel="shortcut icon" href="./assets/img/favicon.ico" />
     <!-- Webpage Title -->
-    <title>Aditya Vikram Singh</title>
+    <title>Cameron R. Wolfe</title>
 
     <!-- Import CSS: Main Stylesheet -->
     <link rel="stylesheet" href="./assets/css/main.css" />
@@ -74,7 +74,7 @@
         </div>
         <div class="header-links">
           <a class="link" href="#about" data-scroll>About Me</a>
-          <a class="link" href="#projects" data-scroll>Projects</a>
+          <a class="link" href="#publications" data-scroll>Publications</a>
         </div>
       </div>
       <a class="down" href="#about" data-scroll
@@ -94,77 +94,21 @@
         />
         <p>
             I am a PhD student in Computer Science at Rice University in Houston, TX.
-            I am currently advised by <a href="http://akyrillidis.github.io/about/">Dr. Anastasios Kyrillidis</a>.
+            I am currently advised by <a class="link" href="http://akyrillidis.github.io/about/">Dr. Anastasios Kyrillidis</a>.
             My interests are are loosely related to math and machine learning.
             Currently, my main interests include non-convex optimization theory, multi-modal deep learning, graph neural networks, distributed neural network training, and quantum computing.
             This list is definitely not exhaustive, however, as my interests change and expand as I find new and interesting projects.<br>
 
             Prior to coming to Rice, I was an undergraduate student in Computer Science at UT Austin.
-            During my time at UT, I did research alongisde the <a href="http://nn.cs.utexas.edu/">neural networks research group</a>.
+            During my time at UT, I did research alongisde the <a class="link" href="http://nn.cs.utexas.edu/">neural networks research group</a>.
             My research interests were mostly related to genetic algorithms, and I was advised by Dr. Cem C. Tutum.
         </p>
       </div>
-
-      <!-- User Specifics -->
-      <div class="user">
-        <!-- Technology Stack #1: Languages -->
-        <div class="tech">
-          <h2>Languages</h2>
-          <i class="devicon-python-plain colored"></i>
-          <i class="devicon-java-plain-wordmark colored"></i>
-          <i class="devicon-cplusplus-plain colored"></i>
-          <i class="devicon-javascript-plain colored"></i>
-          <p>
-            My favorite languages for systems programming, web automation, and
-            data analysis.
-          </p>
-        </div>
-
-        <!-- Technology Stack #2: Front-End -->
-        <div class="tech">
-          <h2>Front-End</h2>
-          <i class="devicon-react-original colored"></i>
-          <i class="devicon-bootstrap-plain colored"></i>
-          <i class="devicon-html5-plain-wordmark colored"></i>
-          <i class="devicon-css3-plain-wordmark colored"></i>
-          <p>
-            My preferred technologies for front-end web development and
-            component design.
-          </p>
-        </div>
-
-        <!-- Technology Stack #3: Back-End -->
-        <div class="tech">
-          <h2>Back-End</h2>
-          <i class="devicon-nodejs-plain colored"></i>
-          <i class="devicon-express-original colored"></i>
-          <i class="devicon-mongodb-plain-wordmark colored"></i>
-          <i class="devicon-mysql-plain-wordmark colored"></i>
-          <p>
-            My preferred technologies for back-end web programming and database
-            architecture.
-          </p>
-        </div>
-
-        <!-- Technology Stack #4: Tools -->
-        <div class="tech">
-          <h2>Tools</h2>
-          <i class="devicon-git-plain colored"></i>
-          <i class="devicon-visualstudio-plain colored"></i>
-          <i class="devicon-github-plain colored"></i>
-          <i class="devicon-docker-plain colored"></i>
-          <p>
-            My favorite tools for version control, code editing, and container
-            orchestration.
-          </p>
-        </div>
-      </div>
-    </section>
-
+    
     <!-- Projects Section -->
-    <section id="projects">
+    <section id="publications">
       <div class="user-details">
-        <h1>Featured Projects</h1>
+        <h1>Publications</h1>
       </div>
 
       <!-- User Project #1: Personal Résumé Website -->
