--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
       <div class="user-projects">
         <div class="contents" style="text-align: center;">
           <h3>Demon: Momentum Decay for Improved Neural Network Training</h3>
-          <p style="text-align: justify;">
+          <p style="text-align: center;">
              Currently under review.
           </p>
           <a
@@ -144,7 +144,7 @@
       <div class="user-projects">
         <div class="contents" style="text-align: center;">
           <h3>E-Stitchup: Data Augmentation for Pre-Trained Embeddings</h3>
-          <p style="text-align: justify;">
+          <p style="text-align: center;">
              Accepted as Undergraduate Honors Thesis, UT Austin (2020).
           </p>
           <a
@@ -159,7 +159,7 @@
       <div class="user-projects">
         <div class="contents" style="text-align: center;">
           <h3>Functional Generative Design of Mechanisms with RNNs and Novelty Search</h3>
-          <p style="text-align: justify;">
+          <p style="text-align: center;">
              Accepted as a Conference Paper at GECCO (2019).
           </p>
           <a
