fixes to alignment;

--- a/index.html
+++ b/index.html
@@ -111,10 +111,9 @@
         <h1>Publications</h1>
       </div>
 
-      <div class="user-projects">
         <div class="contents" style="text-align: center;">
           <h3>Distributed Learning of Deep Neural Networks using Independent Subnet Training</h3>
-          <p style="text-align: justify;">
+          <p style="text-align: center;">
              Currently under review.
           </p>
           <a
@@ -124,7 +123,6 @@
             >Access on Arxiv</a
           >
         </div>
-      </div>
       
       <div class="user-projects">
         <div class="contents" style="text-align: center;">
