--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
       <div class="user-details">
         <h1>Publications</h1>
       </div>
-
+      <div class="user-projects">
         <div class="contents" style="text-align: center;">
           <h3>Distributed Learning of Deep Neural Networks using Independent Subnet Training</h3>
           <p style="text-align: center;">
@@ -123,6 +123,7 @@
             >Access on Arxiv</a
           >
         </div>
+      </div>
       
       <div class="user-projects">
         <div class="contents" style="text-align: center;">
