fix formatting for publications

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         </div>
         <div class="header-links">
           <a class="link" href="#about" data-scroll>About Me</a>
-          <a class="link" href="#publications" data-scroll>Publications</a>
+          <a class="link" href="#projects" data-scroll>Publications</a>
         </div>
       </div>
       <a class="down" href="#about" data-scroll
@@ -106,7 +106,7 @@
       </div>
     
     <!-- Projects Section -->
-    <section id="publications">
+    <section id="projects">
       <div class="user-details">
         <h1>Publications</h1>
       </div>
