added different icon

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         Cameron R. Wolfe Rice Univesity, Cameron R. Wolfe Texas, Cameron R. Wolfe website"
     />
     <!-- Webpage Logo -->
-    <link rel="shortcut icon" href="./assets/img/favicon.ico" />
+    <link rel="shortcut icon" href="./assets/img/ai.ico" />
     <!-- Webpage Title -->
     <title>Cameron R. Wolfe</title>
 
