--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           <a
             aria-label="My Medium Profile"
             target="_blank"
-            href="https://wolfecameron.medium.com"
+            href="wolfecameron.medium.com"
           >
             <i class="icon fa fa-medium" aria-hidden="true"></i>
           </a>
