add new publication

--- a/index.html
+++ b/index.html
@@ -106,6 +106,26 @@
       </div>
       <div class="user-projects">
         <div class="contents" style="text-align: center;">
+          <h3>GIST: Distributed Training for Large-Scale Graph Convolutional Networks</h3>
+          <p style="text-align: center;">
+             Currently under review.
+          </p>
+          <a
+            class="project-link"
+            target="_blank"
+            href="https://arxiv.org/abs/2102.10424"
+            >Access on Arxiv</a
+          >
+          <a
+            class="project-link"
+            target="_blank"
+            href="https://github.com/wolfecameron/GIST"
+            >View Code</a
+          >
+        </div>
+      </div>
+      <div class="user-projects">
+        <div class="contents" style="text-align: center;">
           <h3>Distributed Learning of Deep Neural Networks using Independent Subnet Training</h3>
           <p style="text-align: center;">
              Currently under review.
