--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- Viewport Metadata -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!-- Description Metadata-->
-    <meta name="description" content="Portfolio Website" />
+    <meta name="description" content="My personal website" />
     <!-- Author Metadata -->
     <meta name="author" content="Cameron Ronald Wolfe" />
     <!-- Keyword Metadata -->
