--- a/index.html
+++ b/index.html
@@ -181,6 +181,12 @@
             href="https://arxiv.org/abs/1903.10103"
             >Access on Arxiv</a
           >
+          <a
+            class="project-link"
+            target="_blank"
+            href="https://github.com/wolfecameron/structural_RNN"
+            >View Code</a
+          >
         </div>
       </div>
     </section>
