--- a/index.html
+++ b/index.html
@@ -106,6 +106,34 @@
       </div>
       <div class="user-projects">
         <div class="contents" style="text-align: center;">
+          <h3>Momentum-inspired Low-Rank Coordinate Descent for Diagonally Constrained SDPs</h3>
+          <p style="text-align: center;">
+             Currently under review.
+          </p>
+          <a
+            class="project-link"
+            target="_blank"
+            href="https://arxiv.org/abs/2106.08775"
+            >Access on Arxiv</a
+          >
+        </div>
+      </div>
+      <div class="user-projects">
+        <div class="contents" style="text-align: center;">
+          <h3>ResIST: Layer-Wise Decomposition of ResNets for Distributed Training</h3>
+          <p style="text-align: center;">
+             Currently under review.
+          </p>
+          <a
+            class="project-link"
+            target="_blank"
+            href="https://arxiv.org/abs/2107.00961"
+            >Access on Arxiv</a
+          >
+        </div>
+      </div>
+      <div class="user-projects">
+        <div class="contents" style="text-align: center;">
           <h3>GIST: Distributed Training for Large-Scale Graph Convolutional Networks</h3>
           <p style="text-align: center;">
              Currently under review.
@@ -224,7 +252,7 @@
 
 
     <footer class="footer">
-      <p>&copy; Cameron R. Wolfe, 2020</p>
+      <p>&copy; Cameron R. Wolfe, 2021</p>
     </footer>
 
     <!-- Import JS: Particles Theme -->
