--- a/index.html
+++ b/index.html
@@ -106,6 +106,20 @@
       </div>
       <div class="user-projects">
         <div class="contents" style="text-align: center;">
+          <h3>REX: Revisiting Budgeted Training with an Improved Schedule</h3>
+          <p style="text-align: center;">
+             Currently under review.
+          </p>
+          <a
+            class="project-link"
+            target="_blank"
+            href="http://arxiv.org/abs/2107.04197"
+            >Access on Arxiv</a
+          >
+        </div>
+      </div>
+      <div class="user-projects">
+        <div class="contents" style="text-align: center;">
           <h3>Momentum-inspired Low-Rank Coordinate Descent for Diagonally Constrained SDPs</h3>
           <p style="text-align: center;">
              Currently under review.
