--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         <p>
             I am a PhD student in Computer Science at Rice University in Houston, TX.
             I am currently advised by <a class="link" href="http://akyrillidis.github.io/about/">Dr. Anastasios Kyrillidis</a>.
-            My interests are are loosely related to math and machine learning.
+            My interests are loosely related to math and machine learning.
             Currently, my main interests include non-convex optimization theory, multi-modal deep learning, graph neural networks, distributed neural network training, and quantum computing.
             This list is definitely not exhaustive, however, as my interests change and expand as I find new and interesting projects.<br><br>
 
