add link to channel

--- a/index.html
+++ b/index.html
@@ -106,6 +106,20 @@
       </div>
       <div class="user-projects">
         <div class="contents" style="text-align: center;">
+          <h3>Provably Efficient Lottery Ticket Discovery</h3>
+          <p style="text-align: center;">
+             Currently under review.
+          </p>
+          <a
+            class="project-link"
+            target="_blank"
+            href="https://arxiv.org/abs/2108.00259"
+            >Access on Arxiv</a
+          >
+        </div>
+      </div>
+      <div class="user-projects">
+        <div class="contents" style="text-align: center;">
           <h3>REX: Revisiting Budgeted Training with an Improved Schedule</h3>
           <p style="text-align: center;">
              Currently under review.
@@ -237,8 +251,12 @@
     <section id="tutorials">
       <div class="user-details">
         <h1>Tutorials</h1>
+          <p>
+             In my free time, I enjoy making video tutorials regarding research topics that I find interesting.
+             These videos are all published on my <a class="link" href="https://www.youtube.com/channel/UCSiGFEoPht6irrm3k7JGiVQ">ResearchMadeSimple channel</a> on YouTube.
+             I aim to provide very clear explanations and background information so that even beginners can begin to understand complex research topics. 
+          </p>      
       </div>
-      
       <div class="user-projects">
         <div class="contents" style="text-align: center;">
           <h3>Introduction to Graph Convolutional Networks</h3>
