add twitter and new tutorials

--- a/index.html
+++ b/index.html
@@ -52,6 +52,13 @@
             <i class="icon fa fa-medium" aria-hidden="true"></i>
           </a>
           <a
+            aria-label="My Twitter"
+            target="_blank"
+            href="https://twitter.com/cwolferesearch"
+          >
+            <i class="icon fa fa-twitter" aria-hidden="true"></i>
+          </a>
+          <a
             aria-label="My Résumé"
             target="_blank"
             href="./assets/documents/resume_cameronwolfe.pdf"
@@ -253,9 +260,31 @@
         <h1>Tutorials</h1>
           <p>
              In my free time, I enjoy making video tutorials regarding research topics that I find interesting.
-             These videos are all published on my <a class="link" href="https://www.youtube.com/channel/UCSiGFEoPht6irrm3k7JGiVQ">ResearchMadeSimple channel</a> on YouTube.
-             I aim to provide very clear explanations and background information so that even beginners can begin to understand complex research topics. 
+             These videos are all published on my <a class="link" href="https://www.youtube.com/channel/UCSiGFEoPht6irrm3k7JGiVQ">ResearchMadeSimple channel</a> on YouTube, and all slides for the presentations can be found <a class="link" href="https://github.com/wolfecameron/RMS_channel">here</a>.
+             I aim to provide very clear explanations and background information so that even beginners can understand complex research topics. 
           </p>      
+      </div>
+      <div class="user-projects">
+        <div class="contents" style="text-align: center;">
+          <h3>Introduction to Graph Independent Subnetwork Training</h3>
+          <a
+            class="project-link"
+            target="_blank"
+            href="https://youtu.be/lc9rYKHkgv0"
+            >View on YouTube</a
+          >
+        </div>
+      </div>
+      <div class="user-projects">
+        <div class="contents" style="text-align: center;">
+          <h3>Optimization Analysis with Polynomials</h3>
+          <a
+            class="project-link"
+            target="_blank"
+            href="https://youtu.be/W8GFwzDbFoQ"
+            >View on YouTube</a
+          >
+        </div>
       </div>
       <div class="user-projects">
         <div class="contents" style="text-align: center;">
