add another paper

--- a/index.html
+++ b/index.html
@@ -127,6 +127,20 @@
       </div>
       <div class="user-projects">
         <div class="contents" style="text-align: center;">
+          <h3>https://arxiv.org/abs/2107.13054</h3>
+          <p style="text-align: center;">
+             Internship project.
+          </p>
+          <a
+            class="project-link"
+            target="_blank"
+            href="https://arxiv.org/abs/2107.13054"
+            >Access on Arxiv</a
+          >
+        </div>
+      </div>
+      <div class="user-projects">
+        <div class="contents" style="text-align: center;">
           <h3>REX: Revisiting Budgeted Training with an Improved Schedule</h3>
           <p style="text-align: center;">
              Currently under review.
