--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
       </div>
       <div class="user-projects">
         <div class="contents" style="text-align: center;">
-          <h3>https://arxiv.org/abs/2107.13054</h3>
+          <h3>Exceeding the Limits of Visual-Linguistic Multi-Task Learning</h3>
           <p style="text-align: center;">
              Internship project.
           </p>
