--- a/index.html
+++ b/index.html
@@ -98,9 +98,9 @@
             I am currently advised by <a class="link" href="http://akyrillidis.github.io/about/">Dr. Anastasios Kyrillidis</a>.
             My interests are loosely related to math and machine learning.
             Currently, my main interests include non-convex optimization theory, provable neural network pruning techniques, and quantum computing.
-            This list is definitely not exhaustive, however, as my interests change and expand as I find new and interesting projects.<br><br>
+            This list is definitely not exhaustive, however, as my interests change and expand as I find new and interesting projects.
             Outside of academia, I am a Research Scientist at <a class="link" href="https://www.alegion.com">Alegion</a>, a software startup based in Austin, TX.
-            At Alegion, I focus on the development of long term, practical research projects in several areas, including online training of neural networks, deep learning in video, and evaluating the quality of video-based annotations for computer vision applications.  
+            At Alegion, I focus on the development of long term, practical research projects in several areas, including online training of neural networks, deep learning in video, and evaluating the quality of video-based annotations for computer vision applications.<br><br> 
 
             Prior to coming to Rice, I was an undergraduate student in Computer Science at UT Austin.
             During my time at UT, I did research alongisde the <a class="link" href="http://nn.cs.utexas.edu/">neural networks research group</a>.
