--- a/index.html
+++ b/index.html
@@ -115,6 +115,20 @@
       </div>
       <div class="user-projects">
         <div class="contents" style="text-align: center;">
+          <h3>i-SpaSP: Structured Neural Pruning via Sparse Signal Recovery</h3>
+          <p style="text-align: center;">
+             Currently under review.
+          </p>
+          <a
+            class="project-link"
+            target="_blank"
+            href="./assets/ispasp_full.pdf"
+            >Download</a
+          >
+        </div>
+      </div>
+      <div class="user-projects">
+        <div class="contents" style="text-align: center;">
           <h3>Provably Efficient Lottery Ticket Discovery</h3>
           <p style="text-align: center;">
              Currently under review.
