--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
           <a
             class="project-link"
             target="_blank"
-            href="./assets/ispasp_full.pdf"
+            href="./assets/documents/ispasp_full.pdf"
             >Download</a
           >
         </div>
