--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
       </div>
       <div class="user-projects">
         <div class="contents" style="text-align: center;">
-          <h3>Provably Efficient Lottery Ticket Discovery</h3>
+          <h3>How much pre-training is enough to discover a good subnetwork?</h3>
           <p style="text-align: center;">
              Currently under review.
           </p>
@@ -138,6 +138,12 @@
             target="_blank"
             href="https://arxiv.org/abs/2108.00259"
             >Access on Arxiv</a
+          >
+          <a
+            class="project-link"
+            target="_blank"
+            href="./assets/documents/earlylth_full.pdf"
+            >Download</a
           >
         </div>
       </div>
