--- a/index.html
+++ b/index.html
@@ -122,6 +122,12 @@
           <a
             class="project-link"
             target="_blank"
+            href="https://arxiv.org/abs/2112.04905"
+            >Access on Arxiv</a
+          >
+          <a
+            class="project-link"
+            target="_blank"
             href="./assets/documents/ispasp_full.pdf"
             >Download</a
           >
