begin adding blog functionality

--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
         <div class="header-links">
           <a class="link" href="#about" data-scroll>About Me</a>
           <a class="link" href="#projects" data-scroll>Publications</a>
+          <a class="link" href="#blogs" data-scroll>Blog Posts</a>
           <a class="link" href="#tutorials" data-scroll>Tutorials</a>
         </div>
       </div>
@@ -291,6 +292,33 @@
             target="_blank"
             href="https://github.com/wolfecameron/structural_RNN"
             >View Code</a
+          >
+        </div>
+      </div>
+    </section>
+    
+    <!-- Blog Posts Section -->
+    <section id="blogs">
+      <div class="user-details">
+        <h1>Blog Posts</h1>
+      </div>
+      <div class="user-projects">
+        <div class="contents" style="text-align: center;">
+          <h3>Deep Learning on Video (Part One): The Early Days...</h3>
+          <p style="text-align: center;">
+             Part one in the video deep learning blog series.
+          </p>
+          <a
+            class="project-link"
+            target="_blank"
+            href="./pages/videop1.html"
+            >Read Here</a
+          >
+          <a
+            class="project-link"
+            target="_blank"
+            href="https://medium.com/towards-data-science/deep-learning-on-video-part-one-the-early-days-8a3632ed47d4"
+            >Read on TDS</a
           >
         </div>
       </div>
