test adding figures to blog posts

--- a/pages/videop1.html
+++ b/pages/videop1.html
@@ -22,5 +22,11 @@
       <h1 id="tufte-css">Deep Learning on Video (Part One): The Early Days...</h1>
       <p class="subtitle">Cameron R. Wolfe</p>
     </article>
+    <section>
+    <figure>
+          <label for="mn-exports-imports" class="margin-toggle">&#8853;</label><input type="checkbox" id="mn-exports-imports" class="margin-toggle"/><span class="marginnote">Image created by the author.</span>
+          <img src="./figs/videop1/3dconv.png" alt="A basic schematic depiction of a 3D convolution operation" />
+        </figure>
+    </section>
   </body>
 </html>
